--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -8,21 +8,22 @@
          </div>
     </div>
     
-        <form action="" method="POST">
+        <form action="" method="POST" enctype="multipart/form-data">
           {{ form.hidden_tag() }}
           <fieldset class="form-group">
             <legend class="border-bottom mb-4">Account Info</legend>
             <div class="form-group">
-              {{ form.username.label(class="form-control-label") }} {% if
-              form.username.errors %} {{form.username(class="form-control
-              form-control-lg is-invalid") }}
-              <div class="invaild-feedback">
-                {% for error in form.username.errors %}
-                <span>{{ error }}</span>
-                {% endfor %}
-              </div>
-              {% else %} {{form.username(class="form-control form-control-lg") }} {%
-              endif %}
+              {{ form.username.label(class="form-control-label") }} 
+              {% if form.username.errors %} 
+                {{form.username(class="form-control form-control-lg is-invalid") }}
+                <div class="invaild-feedback">
+                  {% for error in form.username.errors %}
+                  <span>{{ error }}</span>
+                  {% endfor %}
+                </div>
+              {% else %} 
+              {{form.username(class="form-control form-control-lg") }} 
+              {% endif %}
             </div>
             <div class="form-group">
               {{ form.email.label(class="form-control-label") }} {% if
@@ -36,7 +37,16 @@
               {% else %} {{form.email(class="form-control form-control-lg") }} {%
               endif %}
             </div>
-          
+            <div class="form-group">
+              {{ form.picture.label() }}
+              {{ form.picture(class="form-control-file") }}
+              {% if form.picture.errors %}
+                {% for error in form.picture.errors %}
+                  <span class="text-danger">{{ error }}</span> <br>
+                {% endfor %}
+              {% endif %} 
+            </div>
+          </fieldset>
           <div class="form-group">
             {{ form.submit(class="btn btn-outline-info") }}
           </div>
