Pagination and user Posts

--- a/flaskblog/templates/user_posts.html
+++ b/flaskblog/templates/user_posts.html
@@ -1,4 +1,6 @@
-{% extends "layout.html" %} {% block content %} {% for post in posts.items %}
+{% extends "layout.html" %} {% block content %} 
+<h1 class="mb-3">Posts by {{ user.username }}  ({{posts.total}})</h1>
+{% for post in posts.items %}
 <!--jinja is the syntax used in flask to access funcitonalities of language-->
 <!--in jinja loops and conditional blocks need to be closed and are surrounded by -->
 <!-- variable names are surrounded by-->
@@ -6,8 +8,6 @@
   <img src="{{ url_for('static', filename='profile_pics/'+post.author.image_file) }}" alt="" class="rounded-circle article-img">
   <div class="media-body">
     <div class="article-metadata">
-      <!-- when information regarding specific author is requeired we make use of url_for mehtod in the href
-      along with the information of that particular user -->
       <a class="mr-2" href="{{ url_for('user_posts', username=post.author.username)  }}">{{ post.author.username }}</a>
       <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
     </div>
@@ -22,9 +22,9 @@ pages can be found in the application -->
 {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
    {% if page_num %}
      {% if posts.page == page_num %}
-       <a class="btn btn-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+       <a class="btn btn-info mb-4" href="{{ url_for('user_posts', username=user.username,  page=page_num) }}">{{ page_num }}</a>
      {% else %}
-       <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+       <a class="btn btn-outline-info mb-4" href="{{ url_for('user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
      {% endif %}
    {% else %}
    ...
