--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -26,16 +26,17 @@
               {% endif %}
             </div>
             <div class="form-group">
-              {{ form.email.label(class="form-control-label") }} {% if
-              form.email.errors %} {{form.email(class="form-control form-control-lg
-              is-invalid") }}
-              <div class="invaild-feedback">
-                {% for error in form.email.errors %}
-                <span>{{ error }}</span>
-                {% endfor %}
-              </div>
-              {% else %} {{form.email(class="form-control form-control-lg") }} {%
-              endif %}
+              {{ form.email.label(class="form-control-label") }} 
+                {% if form.email.errors %} 
+                  {{form.email(class="form-control form-control-lg is-invalid") }}
+                    <div class="invaild-feedback">
+                      {% for error in form.email.errors %}
+                        <span>{{ error }}</span>
+                      {% endfor %}
+                    </div>
+                {% else %} 
+                  {{form.email(class="form-control form-control-lg") }} 
+                {% endif %}
             </div>
             <div class="form-group">
               {{ form.picture.label() }}
