--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -38,14 +38,14 @@
     <div class="form-group">
       {{ form.submit(class="btn btn-outline-info") }}
     </div>
-    <small class="text-muted ml-2"><a href="{{ url_for('reset_request') }}">Forgot Password?</a></small>
+    <small class="text-muted ml-2"><a href="{{ url_for('users.reset_request') }}">Forgot Password?</a></small>
   </form>
 </div>
 
 <div class="border-top pt-3">
   <small class="muted">
     Need an account?
-    <a class="ml-2" href="{{url_for('register')}}">Register </a>
+    <a class="ml-2" href="{{url_for('users.register')}}">Register </a>
   </small>
 </div>
 {% endblock content %}
