--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -64,7 +64,7 @@
 <div class="border-top pt-3">
   <small class="muted">
     Already have an account?
-    <a class="ml-2" href="{{url_for('login')}}">Sign in</a>
+    <a class="ml-2" href="{{url_for('users.login')}}">Sign in</a>
   </small>
 </div>
 {% endblock content %}
